--- a/static/css/courses-select.css
+++ b/static/css/courses-select.css
@@ -1,213 +1,217 @@
 body[data-theme="light"] {
-    display: flex;
-    height: fit-content;
-    flex-direction: column;
-    background-color: var(--general-background);
+  display: flex;
+  height: fit-content;
+  flex-direction: column;
+  background-color: var(--general-background);
 }
 
 body[data-theme="dark"] {
-    height: fit-content;
-    display: flex;
-    flex-direction: column;
+  height: fit-content;
+  display: flex;
+  flex-direction: column;
 }
 
 nav {
-    background-color: var(--general-background);
-    padding: 10px;
-    width: 100%;
-    box-shadow: 0px 5px 30px var(--dashboard-nav-dropshadow);
-    -webkit-box-shadow: -0px 5px 30px var(--dashboard-nav-dropshadow);
-    -moz-box-shadow: -0px 5px 30px var(--dashboard-nav-dropshadow);
+  background-color: var(--general-background);
+  padding: 10px;
+  width: 100%;
+  box-shadow: 0px 5px 30px var(--dashboard-nav-dropshadow);
+  -webkit-box-shadow: -0px 5px 30px var(--dashboard-nav-dropshadow);
+  -moz-box-shadow: -0px 5px 30px var(--dashboard-nav-dropshadow);
 }
 
-
 nav .menu-icon i {
-    font-size: 24px;
-    font-weight: 600;
-    color: var(--primarycolor);
+  font-size: 24px;
+  font-weight: 600;
+  color: var(--primarycolor);
 }
 
 main {
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 main .title {
-    color: var(--primarycolor);
-    width: 100%;
-    display: flex;
-    align-self: center;
-    justify-content: flex-start;
-    gap: 25%;
-    padding: 5px;
-    font-size: x-large;
-    margin-top: 10px;
-    margin-bottom: 10px;
+  color: var(--primarycolor);
+  width: 100%;
+  display: flex;
+  align-self: center;
+  justify-content: flex-start;
+  gap: 25%;
+  padding: 5px;
+  font-size: x-large;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 main .title i {
-    font-size: 28px;
+  font-size: 28px;
 }
 
 main .courses-container {
-    padding: 5px;
-    height: fit-content;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    gap: 0.9rem;
-    width: 100%;
+  padding: 5px;
+  height: fit-content;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 0.9rem;
+  width: 100%;
 }
 
 main .courses-container .courses-card {
-    width: 100%;
-    background-color: white;
-    color: var(--primarycolor);
-    border-radius: 10px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 15px 10px;
-    box-shadow: 0px 3px 30px var(--boxshadow-color);
-    -webkit-box-shadow: -0px 3px 30px var(--boxshadow-color);
-    -moz-box-shadow: -0px 3px 30px var(--boxshadow-color);
+  width: 100%;
+  background-color: white;
+  color: var(--primarycolor);
+  border-radius: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 15px 10px;
+  box-shadow: 0px 3px 30px var(--boxshadow-color);
+  -webkit-box-shadow: -0px 3px 30px var(--boxshadow-color);
+  -moz-box-shadow: -0px 3px 30px var(--boxshadow-color);
 }
 
 main .courses-container .courses-card .info {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: center;
-    font-size: 18px;
-    width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+  font-size: 18px;
+  width: 100%;
 }
 
 main .courses-container .courses-card .info .upper {
-    display: flex;
-    width: 100%;
-    margin-bottom: 3px;
+  display: flex;
+  width: 100%;
+  margin-bottom: 3px;
 }
 
 main .courses-container .courses-card .info .upper p {
-    width: 100%;
+  width: 100%;
 }
 
 main .courses-container .courses-card input {
-    width: 20px;
-    height: 20px;
+  width: 20px;
+  height: 20px;
 }
 
 main .courses-container .courses-card input:checked {
-    background-color: red;
+  background-color: red;
 }
 
 main > input {
-    background-color: var(--primarycolor);
-    padding: 0.8rem;
-    border: none;
-    font-size: large;
-    color: white;
-    border-radius: 10px;
-    margin: 0.8rem .1rem;
+  background-color: var(--primarycolor);
+  padding: 0.8rem;
+  border: none;
+  font-size: large;
+  color: white;
+  border-radius: 10px;
+  margin: 0.8rem 0.1rem;
 }
 
 main .lower-info {
-    color: var(--primarycolor);
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 5px;
-    font-size: 18px;
-    font-style: italic;
-    margin-top: 5%;
+  color: var(--primarycolor);
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 5px;
+  font-size: 18px;
+  font-style: italic;
+  margin-top: 5%;
 }
 
-.modal {
-    position: fixed;
-    top: 0;
-    left: 0;
-    background-color: var(--general-modal-background);
-    -webkit-backdrop-filter: blur(10px);
-    backdrop-filter: blur(10px);
-    width: 100%;
-    height: 100vh;
-    z-index: 2;
-    display: none;
-    visibility: hidden;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+.modal,
+.modal-authorization {
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: var(--general-modal-background);
+  -webkit-backdrop-filter: blur(10px);
+  backdrop-filter: blur(10px);
+  width: 100%;
+  height: 100vh;
+  z-index: 2;
+  display: none;
+  visibility: hidden;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
-.modal .card {
-    background-color: white;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-evenly;
-    padding: .8rem;
-    width: 85%;
-    height: 30%;
-    color: var(--primarycolor);
-    border-radius: 10px;
-    box-shadow: 0px 3px 30px var(--boxshadow-color);
-    -webkit-box-shadow: -0px 3px 30px var(--boxshadow-color);
-    -moz-box-shadow: -0px 3px 30px var(--boxshadow-color);
+.modal .card,
+.modal-authorization .card {
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+  padding: 0.8rem;
+  width: 85%;
+  height: 30%;
+  color: var(--primarycolor);
+  border-radius: 10px;
+  box-shadow: 0px 3px 30px var(--boxshadow-color);
+  -webkit-box-shadow: -0px 3px 30px var(--boxshadow-color);
+  -moz-box-shadow: -0px 3px 30px var(--boxshadow-color);
 }
 
-.modal .card p {
-    font-size: 18px;
-    text-align: center;
+.modal .card p,
+.modal-authorization .card p {
+  font-size: 18px;
+  text-align: center;
 }
 
-.modal .card .action {
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 1rem;
-    font-size: large;
+.modal .card .action,
+.modal-authorization .card .action {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+  font-size: large;
 }
 
-.modal .card .action input {
-    font-size: inherit;
-    padding: 8px;
-    width: 30%;
-    color: white;
-    background-color: var(--primarycolor);
-    border: none;
-    border-radius: 5px;
+.modal .card .action input,
+.modal-authorization .card .action input {
+  font-size: inherit;
+  padding: 8px;
+  width: 30%;
+  color: white;
+  background-color: var(--primarycolor);
+  border: none;
+  border-radius: 5px;
 }
 
 footer {
-    z-index: 1;
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-    overflow-x: hidden;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 5px;
-    gap: 5px;
-    box-shadow: -0px -5px 30px var(--boxshadow-color);
-    -webkit-box-shadow: -0px -5px 30px var(--boxshadow-color);
-    -moz-box-shadow: -0px -5px 30px var(--boxshadow-color);
+  z-index: 1;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  overflow-x: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 5px;
+  gap: 5px;
+  box-shadow: -0px -5px 30px var(--boxshadow-color);
+  -webkit-box-shadow: -0px -5px 30px var(--boxshadow-color);
+  -moz-box-shadow: -0px -5px 30px var(--boxshadow-color);
 }
 
 footer img {
-    width: 20px;
-    height: 20px;
-    border-radius: 100%;
+  width: 20px;
+  height: 20px;
+  border-radius: 100%;
 }
 
 footer p {
-    font-size: 13px;
-    font-weight: bold;
-    font-style: italic;
+  font-size: 13px;
+  font-weight: bold;
+  font-style: italic;
 }
